# Autonomious_Orchestrator_AI

./: .gitignore  @AutomationLog.txt  AGENTS.md  AgentOS.cmd  HEARTBEAT.md  PROOF_STATUS.md  README.md  SECURITY.md  SOUL.md  audit.md  debug_apis.py  debug_edgar_browse.py  debug_raw_apis.py  debug_sec_yf.py  debug_ticker_search.py  debug_yf_search.py  debug_yfinance.py  memory.sqlite3  pyproject.toml  pyrightconfig.json  test_final_smoke.py  universal_os_control_agent_plan.md
.github/instructions/: codacy.instructions.md
agentos_orchestrator/: __init__.py  app_family_registry.py  cli.py  sdk.py
agentos_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentos_orchestrator/cognition/: __init__.py  abstract_world_model.py  active_inference.py  adaptation_readiness.py  adaptation_training.py  adaptive_perception.py  affordance_policy_memory.py  app_adapters.py  app_agent_runtime.py  benchmark_promotion.py  benchmark_scenarios.py  blocker_repair.py  capability_profile.py  control_substrate.py  control_surface_discovery.py  differentiable_memory.py  frontier_api.py  hierarchical_planner.py  hierarchical_task_decomposer.py  intent_verifier.py  learned_world_model.py  live_fire_eval.py  live_fire_eval_recipes.py  live_fire_review.py  local_vla.py  mcts_simulator.py  mode_arbitration.py  os_eval_packs.py  pixel_pomdp.py  pomdp_state.py  programmer_recipes.py  replay_debug.py  risk_guardian.py  runtime_state.py  safety_gates.py  self_documentation.py  semantic_memory.py  speculative_planner.py  tool_executor.py  trajectory_recorder.py  (+6 more)
agentos_orchestrator/config/: __init__.py  markdown_config.py  models.py
agentos_orchestrator/core/: agents.py  approvals.py  authorization.py  checkpoint.py  durable.py  events.py  memory.py  orchestrator.py  (+5 more)
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/capabilities/: default.json
apps/dashboard/src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs
constraints/: py314-full.txt
crates/agent_body/: Cargo.toml
crates/agent_body/src/: lib.rs  main.rs  models.rs  native.rs  state.rs  surfaces.rs
docs/: universal_os_control_agent_plan.md
scripts/: install-agentos.ps1  promote_golden_traces.py  start-agentos.ps1
tasks/: lessons.md  todo.md
tests/: gateway_test_support.py  test_adaptation_training.py  test_adapters.py  test_app_family_registry.py  test_benchmark_promotion.py  test_cli.py  test_cognition.py  test_cognition_v2.py  test_cognition_v3.py  test_config_core.py  test_config_gateway.py  test_dashboard_endpoints.py  test_durability.py  test_gateway_desktop_workflow.py  test_gateway_routing.py  test_intent_verifier.py  test_isolated_desktop_adapter.py  test_live_fire_eval.py  test_live_fire_notepad.py  test_live_fire_paint.py  test_market_query_representation.py  test_mcp_client.py  test_mcp_integration.py  test_mixed_handoff_scenario.py  test_orchestrator.py  test_phase3.py  test_policy.py  test_product.py  test_programmer_recipes.py  test_research.py  test_retrieval_memory_bounds.py  test_risk_guardian.py  test_speculative_planner.py  test_universal_os_agent.py  test_vision_pipeline.py  test_windows_uia_backend.py  test_worker_agent_selectors.py  test_workflow_service.py
(+102 files in other folders)
