[project]
name = "agentos-orchestrator"
version = "0.1.0"
description = "Hybrid Python/Rust autonomous research orchestrator scaffold with policy gates, durable state, MCP integration, and OS-control adapters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dashboard = [
	"fastapi>=0.115",
	"httpx>=0.27",
	"uvicorn[standard]>=0.30",
]

[project.scripts]
agentos = "agentos_orchestrator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentos_orchestrator*"]
