[project]
name = "agentos-orchestrator"
version = "0.1.0"
description = "Python autonomous research orchestrator with a Rust native input body, policy gates, durable state, MCP integration, and OS-control adapters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"Pillow>=11.1,<12",
]

[project.optional-dependencies]
core = [
	"Pillow>=11.1,<12",
]
dashboard = [
	"fastapi>=0.115,<1",
	"httpx>=0.27,<1",
	"uvicorn[standard]>=0.30,<1",
	"websockets>=14,<16",
]
research = [
	"httpx>=0.27,<1",
	"playwright>=1.50,<2",
	"requests>=2.32,<3",
	"yfinance>=0.2.54,<1",
]
cognition = [
	"numpy>=2.2,<3",
	"pandas>=2.2,<3",
	"scikit-learn>=1.6,<2",
	"scipy>=1.15,<2",
	"transformers>=4.48,<5",
	"z3-solver>=4.13,<5",
]
os-control = [
	"mss>=10.0,<11",
]
full = [
	"fastapi>=0.115,<1",
	"httpx>=0.27,<1",
	"mss>=10.0,<11",
	"numpy>=2.2,<3",
	"pandas>=2.2,<3",
	"playwright>=1.50,<2",
	"requests>=2.32,<3",
	"scikit-learn>=1.6,<2",
	"scipy>=1.15,<2",
	"transformers>=4.48,<5",
	"uvicorn[standard]>=0.30,<1",
	"websockets>=14,<16",
	"yfinance>=0.2.54,<1",
	"z3-solver>=4.13,<5",
]
dev = [
	"pytest>=8.3,<9",
]

[project.scripts]
agentos = "agentos_orchestrator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentos_orchestrator*"]
