[package]
name = "agent_body"
version = "0.1.0"
edition = "2021"
description = "Experimental sandbox state proxy for the AgentOS orchestrator."

[dependencies]
enigo = { version = "0.6.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
uiautomation = { version = "0.19", optional = true }

[features]
default = []
# Enable real Microsoft UI Automation tree enumeration on Windows.
# Without this feature, `native.snapshot()` only returns the desktop +
# cursor stub.  Build with: `cargo build --features uia-windows`.
uia-windows = ["uiautomation"]
