[package]
name = "agentos_dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentos_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
